[gd_scene load_steps=8 format=3 uid="uid://c32tijiy5co8o"]

[ext_resource type="PackedScene" uid="uid://d2i15cdabp3yy" path="res://ui/fried_window/fried_window.tscn" id="1_s10su"]
[ext_resource type="Script" uid="uid://716lnnkg81kn" path="res://ui/fried_window/new_campaign_window/new_campaign_window.gd" id="2_vigq5"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="3_ofrs4"]
[ext_resource type="PackedScene" uid="uid://bmjoy32xi5brf" path="res://ui/fried_button/fried_button_green.tscn" id="4_fanly"]
[ext_resource type="Texture2D" uid="uid://bj4xmtdtphxee" path="res://resources/icons/plus_icon.png" id="5_m6a8o"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ml28d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05vpd"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[node name="NewCampaignWindow" instance=ExtResource("1_s10su")]
offset_right = 383.0
offset_bottom = 153.0
script = ExtResource("2_vigq5")

[node name="TitleLabel" parent="M/VBoxContainer/TitleBar/H" index="0"]
text = "New Campaign"

[node name="ServerContainer" type="MarginContainer" parent="M/VBoxContainer/TitleBar/H" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/TitleBar/H/ServerContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SteamButton" type="Button" parent="M/VBoxContainer/TitleBar/H/ServerContainer/H" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_ml28d")
text = "Steam Network"

[node name="EnetButton" type="Button" parent="M/VBoxContainer/TitleBar/H/ServerContainer/H" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_ml28d")
text = "Direct Connection"

[node name="V" type="VBoxContainer" parent="M/VBoxContainer/Body" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="M2" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/M2" index="0"]
layout_mode = 2
text = "Basic information (* required):"

[node name="C" type="PanelContainer" parent="M/VBoxContainer/Body/V" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_05vpd")

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V/C" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 4

[node name="Fields" type="VBoxContainer" parent="M/VBoxContainer/Body/V/C/M" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="ErrorContainer" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ErrorLabel" type="Label" parent="M/VBoxContainer/Body/V/ErrorContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.600551, 0.174393, 0.188491, 1)
text = "Error Message"
vertical_alignment = 1

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="3"]
layout_mode = 2

[node name="FriedConvexPanel" parent="M/VBoxContainer/Body/V/M" index="0" instance=ExtResource("3_ofrs4")]
layout_mode = 2

[node name="CreateButton" parent="M/VBoxContainer/Body/V/M" index="1" instance=ExtResource("4_fanly")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("5_m6a8o")
